manifests/examples/app-alicloud-foobar.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foobar
  name: foobar-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foobar
  template:
    metadata:
      labels:
        app: foobar
    spec:
      terminationGracePeriodSeconds: 120
      imagePullSecrets:
        - name: foobar-secret-register
      volumes:
        - name: bazqux-volume
          emptyDir: {}
      containers:
        - name: foobar
          image: register.example.com/project/foobar:release-0.1.0-20250722
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
            successThreshold: 1 # must be 1 by design
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 5
            successThreshold: 1 # must be 1 by design
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 3
            successThreshold: 2
            timeoutSeconds: 2
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]
          volumeMounts:
            - name: bazqux-volume
              mountPath: /bazqux
---
apiVersion: v1
kind: Service
metadata:
  namespace: foobar
  name: foobar-svc
spec:
  selector:
    app: foobar
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: foobar
  name: foobar-ingress
  annotations:
    alb.ingress.kubernetes.io/connection-drain-enabled: "true"
    alb.ingress.kubernetes.io/connection-drain-timeout: "60"
    alb.ingress.kubernetes.io/rewrite-target: /${1}
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - foobar.example.com
  rules:
    - host: foobar.example.com
      http:
        paths:
          - path: /web/(.*)
            pathType: Prefix
            backend:
              service:
                name: foobar-svc
                port:
                  number: 8080
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: foobar-svc
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-redirect-ingress
  namespace: foobar
  annotations:
    alb.ingress.kubernetes.io/actions.redirect-slash: |
      [{
          "type": "Redirect",
          "RedirectConfig": {
              "host": "${host}",
              "path": "${path}/",
              "port": "${port}",
              "protocol": "${protocol}",
              "query": "${query}",
              "httpCode": "301"
          }
      }]
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - foobar.example.com
  rules:
    - host: foobar.example.com
      http:
        paths:
          - path: /web
            pathType: Exact
            backend:
              service:
                name: redirect-slash
                port:
                  name: use-annotation
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-blackhole-ingress
  namespace: foobar
  annotations:
    alb.ingress.kubernetes.io/actions.blackhole: |
      [
        {
          "type": "FixedResponse",
          "FixedResponseConfig": {
            "httpCode": "403"
          }
        }
      ]
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - foobar.example.com
  rules:
    - host: foobar.example.com
      http:
        paths:
          - path: /web/path/to/troublemaker
            pathType: Exact
            backend:
              service:
                name: blackhole
                port:
                  name: use-annotation
