manifests/examples/app-alicloud-nginxproxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ops
  name: nginxproxy-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxproxy
  template:
    metadata:
      labels:
        app: nginxproxy
    spec:
      volumes:
        - name: nginxproxy-configmap-volume
          configMap:
            name: nginxproxy-configmap
      containers:
        - name: nginxproxy
          image: nginx:1.29-alpine3.22
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "0.25"
              memory: "500Mi"
          volumeMounts:
            - name: nginxproxy-configmap-volume
              mountPath: /etc/nginx/conf.d
---
apiVersion: v1
kind: Service
metadata:
  namespace: ops
  name: nginxproxy-svc
spec:
  selector:
    app: nginxproxy
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ops
  name: nginxproxy-ingress
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - proxy.heylinux.com
  rules:
    - host: proxy.heylinux.com
      http:
        paths:
          - path: /api/foo/
            pathType: Prefix
            backend:
              service:
                name: nginxproxy-svc
                port:
                  number: 80
          - path: /api/bar/xyz/
            pathType: Prefix
            backend:
              service:
                name: nginxproxy-svc
                port:
                  number: 80
