manifests/examples/app-alicloud-oneapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aigc
  name: oneapi-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oneapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oneapi
    spec:
      volumes:
        - name: oneapi-data-volume
          persistentVolumeClaim:
            claimName: oneapi-data-pvc
      containers:
        - name: oneapi
          image: justsong/one-api:v0.6.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 250m
              memory: 500Mi
          volumeMounts:
            - name: oneapi-data-volume
              mountPath: "/data"
---
apiVersion: v1
kind: Service
metadata:
  namespace: aigc
  name: oneapi-svc
spec:
  selector:
    app: oneapi
  clusterIP: None
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aigc
  name: oneapi-ingress
  annotations:
    alb.ingress.kubernetes.io/order: "996"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - aigc.example.com
  rules:
    - host: aigc.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oneapi-svc
                port:
                  number: 3000
