manifests/examples/app-alicloud-sonarqube.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonar
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: sonar
  name: sonarqube-sts
spec:
  serviceName: "sonarqube-svc"
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  volumeClaimTemplates:
    - metadata:
        name: sonarqube-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: alicloud-disk-available
        resources:
          requests:
            storage: 50Gi
    - metadata:
        name: sonarqube-extensions
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: alicloud-disk-available
        resources:
          requests:
            storage: 20Gi
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:26.4.0.121862-community
          args:
            - -Dsonar.web.context=/sonar
            - -Dsonar.core.serverBaseURL=https://devops.example.com/sonar
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - mountPath: /opt/sonarqube/data/
              name: sonarqube-data
            - mountPath: /opt/sonarqube/extensions/
              name: sonarqube-extensions
---
apiVersion: v1
kind: Service
metadata:
  namespace: sonar
  name: sonarqube-svc
spec:
  selector:
    app: sonarqube
  clusterIP: None
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sonar
  name: sonarqube-ingress
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - devops.example.com
  rules:
    - host: devops.example.com
      http:
        paths:
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube-svc
                port:
                  number: 9000
